--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <p>
 	<ul>
 		<li>Publish new releases with seam unreleased changes for 2.3.2</li>
-		<li>Lots of small bug-fixed</li>
+		<li>A lot of small bug fixes</li>
 		<li>Ability to put Seam on shared classpath (WIP)</li>
 	</ul>
 
