--- a/examples/icefaces/icefaces-web/src/main/webapp/exp/introExp.html
+++ b/examples/icefaces/icefaces-web/src/main/webapp/exp/introExp.html
@@ -18,7 +18,7 @@
     <p>
        <center>
        <form>
-          <INPUT type="button" value="Close Window" onclick="window.close()">
+          <INPUT type="button" value="Close Window" onclick="window.close()" />
        </form>
        </center>
     </p>
@@ -47,7 +47,7 @@
    <p>
        <center>
        <form>
-          <INPUT type="button" value="Close Window" onclick="window.close()">
+          <INPUT type="button" value="Close Window" onclick="window.close()" />
        </form>
        </center>
     </p>
