shared classpath hopefully finished

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 	<ul>
 		<li>Publish new releases with seam unreleased changes for 2.3.2</li>
 		<li>A lot of small bug fixes</li>
-		<li>Ability to put Seam on shared classpath (WIP)</li>
+		<li>Ability to put Seam on shared classpath</li>
 	</ul>
 
 You can view a <a href="https://github.com/albfernandez/jboss-seam/blob/Seam_2_3_albfernandez/distribution/src/main/assembly/changelog.txt">detailed list of changes </a>
